Added web interface

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,12 @@ TROUBLESHOOTING.md
 recipe_bot/
 my_recipe_bot/
 GITHUB_MODELS_SETUP.md
+data/
+simtalk/
+dumping_ground/
+simtalk_2/
+simtalk_3/
+react-web/
+react-test/
+web_interface_guide.md
+test_web/
