--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,6 @@ classifiers = [
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -27,7 +26,7 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Text Processing :: Linguistic"
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 dependencies = [
     "typer>=0.9.0",
     "openai>=1.0.0",
@@ -35,6 +34,11 @@ dependencies = [
     "pyyaml>=6.0.0",
     "rich>=13.0.0",
     "python-dotenv>=1.0.0",
+    "model2vec>=0.6.0", # Default fast static embeddings
+    "sentence-transformers>=3.2.1", # Fallback comprehensive embeddings
+    "instructor>=1.10.0",
+    "fastapi>=0.104.0",
+    "uvicorn>=0.24.0",
 ]
 
 [project.optional-dependencies]
