--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,9 @@ react-web/
 react-test/
 web_interface_guide.md
 test_web/
+azure_config_help.md
+debug_azure_detailed.pyc
+simple_azure_test.py
+test_azure.py
+SimTalk Copilot
+src/qgen/web/frontend/src/components/query-generator.code-workspace
