Enhance RAG system with configurable thresholds and query review interface
- Introduced RAGConfig class to manage thresholds for confidence and realism scores.
- Updated FactDataManager and QueryDataManager to utilize configurable thresholds for statistics.
- Modified rag_models.py to include new thresholds for high/low confidence and realism.
- Enhanced backend API to support chunk mapping for query generation and multi-hop queries.
- Implemented SingleQueryReview component for detailed review of generated queries with keyboard shortcuts.
- Improved frontend dashboard to display query review metrics and initiate review process.
- Refactored query approval process to handle edits and approvals more efficiently.

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,9 @@ src/qgen/web/frontend/src/components/query-generator.code-workspace
 .playwright-mcp/
 scripts/
 HIGHLIGHTING_IMPLEMENTATION.md
+cc.sh
+.DS_Store
+dim_test_*
+rag_test_*
+*.pkl
+.DS_Store
