feat: add keyboard shortcuts for navigation and actions across various components
- Implemented keyboard shortcuts for tab navigation and main actions in DimensionProjectDashboard.
- Enhanced QueryReview and TupleReview components with keyboard shortcuts for bulk actions and editing.
- Integrated keyboard shortcuts for actions in RAGProjectDashboard, including query generation and fact approval.
- Added keyboard shortcuts for file upload functionality in FileUpload component.
- Updated Notification component to include a close action shortcut.
- Replaced standard buttons with ButtonWithShortcut for improved accessibility and user experience.

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ rag_test_*
 THEME_FIX_SUMMARY.md
 DASHBOARD_THEME_STATUS.md
 src/qgen/web/frontend-shadcn/KEYBOARD_SHORTCUTS.md
+src/qgen/web/frontend-shadcn/KEYBOARD_SHORTCUTS_COMPLETE.md
