Moved to shadcn frontend

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ THEME_FIX_SUMMARY.md
 DASHBOARD_THEME_STATUS.md
 src/qgen/web/frontend-shadcn/KEYBOARD_SHORTCUTS.md
 src/qgen/web/frontend-shadcn/KEYBOARD_SHORTCUTS_COMPLETE.md
+src/qgen/web/frontend/KEYBOARD_SHORTCUTS_COMPLETE.md
+src/qgen/web/frontend/KEYBOARD_SHORTCUTS.md
+src/qgen/web/MIGRATION_SUMMARY.md
