feat: add keyboard shortcuts for RAG queries and single fact/query reviews
- Introduced RAGQueriesShortcuts component to manage keyboard shortcuts for generating queries and starting reviews.
- Implemented SingleFactReview component for reviewing individual facts with keyboard shortcuts for approval, rejection, editing, and skipping.
- Enhanced SingleQueryReview component to include status filtering and keyboard shortcuts for query review actions.
- Updated keyboard shortcut handling to differentiate between text input elements and other elements, allowing for more intuitive shortcut usage.
- Adjusted shortcut keys for saving edits to use '^' instead of '⌘' for better compatibility across platforms.

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ src/qgen/web/frontend-shadcn/KEYBOARD_SHORTCUTS_COMPLETE.md
 src/qgen/web/frontend/KEYBOARD_SHORTCUTS_COMPLETE.md
 src/qgen/web/frontend/KEYBOARD_SHORTCUTS.md
 src/qgen/web/MIGRATION_SUMMARY.md
+KEYBOARD_SHORTCUTS_ANALYSIS.md
