--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ src/qgen/web/frontend/KEYBOARD_SHORTCUTS_COMPLETE.md
 src/qgen/web/frontend/KEYBOARD_SHORTCUTS.md
 src/qgen/web/MIGRATION_SUMMARY.md
 KEYBOARD_SHORTCUTS_ANALYSIS.md
+BACKEND_MIGRATION.md
